syntax ="proto3";

option go_package =".;service";

message ServerStreamRequest {
  string data =1;
}

message ServerStreamResponse{
   int32  code =1;
   string value =2;
}

message PingRequest {
  string data =1;
}

message PingResponse {
  string value =1;
}

service ServerStreamTalk{
  rpc Ping(PingRequest) returns (PingResponse) {}
  rpc listValue(ServerStreamRequest) returns(stream ServerStreamResponse){}
}